# arena-marl

./: .gitignore  README.md  ReadMe.md
arena_bringup/launch/: start_evaluation.launch  start_training.launch  visualization_training.launch
arena_bringup/launch/sublaunch_training/: flatland_simulator.launch  marl_single_env_training.launch  start_envs.launch
rl_utils/rl_utils/: base_agent_wrapper.py
rl_utils/rl_utils/envs/: pettingzoo_env.py
rl_utils/rl_utils/utils/: communication_channel.py  (+4 more)
task_generator/: CMakeLists.txt  package.xml
task_generator/case_task_generator/scripts/: Crate.py  Grid.py  gridworld.py  inner_functions.py  rviz_visualization.py  task_gen1.py  warehouse_gen_1.py  wh1.npy
task_generator/msg/: crate_action.msg  robot_goal.msg  robot_goal_list.msg
task_generator/task_generator/: obstacles_manager.py  robot_manager.py  tasks.py  utils.py
testing/scripts/: evaluation.py  marl_deployment.py
training/configs/: deployment_config.yaml  deployment_config_copy.yaml  marl_train.yaml  training_config.yaml
training/scripts/: train_agent.py
training/tools/: staged_train_callback.py  train_agent_utils.py
warehouse/: CMakeLists.txt  ReadMe.md  package.xml  setup.py
warehouse/example_grid/: grid.npy
warehouse/launch/: map_launch.launch  rest.launch  start_arena_gridworld.launch  start_gridworld_evaluation.launch
warehouse/rviz/: gridworld.rviz
warehouse/src/: Crate.py  Grid.py  change_simulation.py  gridworld.py  map_node.py  rviz_visualization.py  task_gen1.py  warehouse_gen_1.py
warehouse/utils/: Grid.py  map_server.launch
(+23 files in other folders)
